# plugin-alt-tab

./: .gitignore  .qol-tray-dev-autostart  Cargo.toml  Makefile  README.md  plugin.toml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CONFIG.md
src/: config.rs  daemon.rs  icon.rs  layout.rs  main.rs  preview.rs  window_source.rs  x11_utils.rs
src/app/: alt_poll.rs  input.rs  live_preview.rs  mod.rs  render.rs
src/delegate/: activation.rs  mod.rs  selection.rs
src/monitor/: mod.rs  poller.rs  state.rs  tracker.rs
src/monitor/platform/: linux.rs  macos.rs  mod.rs
src/picker/: keepalive.rs  mod.rs  run.rs
src/platform/: cg_helpers.rs  linux.rs  macos.rs  mod.rs  preview.rs  windows.rs
ui/: index.html  index.js  style.css
