[package]
name = "alt-tab"
version = "0.3.0"
edition = "2021"

[dependencies]
dirs = "5.0"
shell-words = "1.1"
gpui = "0.2"
gpui-component = "0.5.0"
open = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
x11rb = "0.13"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["allow-unsafe-code", "xinput"] }
image = { version = "0.25", default-features = false, features = ["png"] }

# macOS only: fix zed-font-kit core-graphics version mismatch
[patch.crates-io]
core-text = { git = "https://github.com/servo/core-foundation-rs", tag = "core-text-v21.0.0" }
core-graphics = { git = "https://github.com/servo/core-foundation-rs", tag = "core-text-v21.0.0" }
core-foundation = { git = "https://github.com/servo/core-foundation-rs", tag = "core-text-v21.0.0" }
core-foundation-sys = { git = "https://github.com/servo/core-foundation-rs", tag = "core-text-v21.0.0" }

[dev-dependencies]
proptest = "1.10.0"
qol-tray = { git = "https://github.com/qol-tools/qol-tray" }
toml = "0.9.8"
